--- a/paper.bib
+++ b/paper.bib
@@ -2,12 +2,28 @@
 %% http://bibdesk.sourceforge.net/
 
 
-%% Created for Peng Oh at 2016-08-17 12:51:15 -0700 
+%% Created for Peng Oh at 2016-09-06 13:01:38 -0700 
 
 
 %% Saved with string encoding Unicode (UTF-8) 
 
 
+
+@article{zhou90,
+	Adsnote = {Provided by the SAO/NASA Astrophysics Data System},
+	Adsurl = {http://adsabs.harvard.edu/abs/1990JGR....9514881Z},
+	Author = {{Zhou}, Y. and {Matthaeus}, W.~H.},
+	Date-Added = {2016-09-06 20:01:25 +0000},
+	Date-Modified = {2016-09-06 20:01:37 +0000},
+	Doi = {10.1029/JA095iA09p14881},
+	Journal = {\jgr},
+	Keywords = {Interplanetary Medium, Magnetohydrodynamic Turbulence, Turbulence Models, Energy Spectra, Interplanetary Space, Solar Wind, Transport Properties},
+	Month = sep,
+	Pages = {14881-14892},
+	Title = {{Models of inertial range spectra of interplanetary magnetohydrodynamic turbulence}},
+	Volume = 95,
+	Year = 1990,
+	Bdsk-Url-1 = {http://dx.doi.org/10.1029/JA095iA09p14881}}
 
 @article{kida90,
 	Abstract = {The interaction of vorticity and shock waves in decaying compressible turbulence is investigated by direct numerical simulation of the Navier-Stokes equation using a spectral method with 64-cubed collocation points. The Taylor microscale Reynolds number decreases from 36 to 17 and the rms Mach number from 0.8 to 0.4 during the decay. It is observed that vorticity is created inside curved shocks through baroclinic interaction and intensified by the compression of fluid elements. Vortex stretching is, on the other hand, dominant outside shocks and is responsible for enhancing the strength of vorticity. A dipole of vorticity is typically created at the vertex of curved shocks, the structure of which is explained in terms of jump relations of velocity derivatives across a curved shock.},
