corrected Brown+ 2011 citation

--- a/paper.tex
+++ b/paper.tex
@@ -1440,17 +1440,17 @@ luminosity), but play a secondary role.
 This exponential dependence of radio halo luminosity with turbulence then raises
 the interesting question of why radio halo scaling relations (e.g.,
 $L_{\nu}$--$L_{\rm X}$) are so tight. Previous statistical modelling of radio
-halo populations \citep{2006MNRAS.369.1577C,2007MNRAS.378.1565C} have focused
-on matching the mean relations, but not the scatter. We believe the latter
-provides a particularly interesting and potentially fruitful constraint. The
-acceleration timescale $\tau_{\rm D}$ and the length of time during which
-acceleration takes place $\tau_{\rm cl}$ must be matched so that there are
-roughly $\sim 2$ e-folds (given the factor $\sim 10$ difference in radio
-luminosity between the radio bright and faint populations; \citet{brown11}),
-otherwise scatter in turbulence (which we might expect given the wide variety of
-merger and infall conditions) will be exponentially amplified in radio
-luminosity. The timescale of the merger has some natural scatter which is not
-obviously correlated with $\tau_{\rm D}$. 
+halo populations \citep{2006MNRAS.369.1577C,2007MNRAS.378.1565C} have focused on
+matching the mean relations, but not the scatter. We believe the latter provides
+a particularly interesting and potentially fruitful constraint. The acceleration
+timescale $\tau_{\rm D}$ and the length of time during which acceleration takes
+place $\tau_{\rm cl}$ must be matched so that there are roughly $\sim 2$ e-folds
+(given the factor $\sim 10$ difference in radio luminosity between the radio
+bright and faint populations; \citealt{2011ApJ...740L..28B}), otherwise scatter
+in turbulence (which we might expect given the wide variety of merger and infall
+conditions) will be exponentially amplified in radio luminosity. The timescale
+of the merger has some natural scatter which is not obviously correlated with
+$\tau_{\rm D}$.
 
 If instead we adopt \C{$\tau_{\rm cl}/\tau_{\rm decay} \sim$const}, i.e. the natural
 lifetime of turbulence is its decay lifetime, then we can show that the
