added clarification to the caption of Fig 7

--- a/paper.tex
+++ b/paper.tex
@@ -1358,16 +1358,17 @@ Obviously, the ideas in this section require further study. \C{For instance, the
     $\tau_{\rm cl}=2.5\,\tau_{\rm D}$ as fiducial values and vary each parameter
     separately in each row of panels. Radio surface brightness profiles (left)
     are contrasted to radio synchrotron spectra (right; for more details see
-    caption to Figure~\ref{fig:param_comp}).  Provided there is a minimum
+    caption to Figure~\ref{fig:param_comp}). Provided there is a minimum
     (threshold) level of turbulence ($X_\rmn{tu}\gtrsim0.2$), here the radio
-    profiles are mainly determined by the CR distribution, while turbulence
-    has a smaller impact. In the bottom two panels we vary the exponential
-    momentum growth factor $\tau_{\rm cl}/\tau_{\rm D}$ (see
-    equations~\ref{eq:pexp} and \ref{eq:Creacc}), which mainly changes the
-    normalisation of the CR distribution and neither spectral shape nor radial
-    synchrotron profile. Interestingly, the flat CR profiles adopted here are
-    similar to those required to reproduce the radio profiles in our CR
-    streaming model (see Figure~\ref{fig:sync_profile}).}}
+    profiles are mainly determined by the CR distribution, while turbulence has
+    a smaller impact. In the bottom two panels we vary the exponential momentum
+    growth factor $\tau_{\rm cl}/\tau_{\rm D}$ (see equations~\ref{eq:pexp} and
+    \ref{eq:Creacc}), but unlike $X_\rmn{tu}$ should not vary strongly with
+    time. Instead, it mainly changes the normalisation of the CR distribution
+    and neither spectral shape nor radial synchrotron profile. Interestingly,
+    the flat CR profiles adopted here are similar to those required to reproduce
+    the radio profiles in our CR streaming model (see
+    Figure~\ref{fig:sync_profile}).}}
   \label{fig:param_comp_tcl_tD}
 \end{figure*}
 
